<resources>
    <string name="app_name">SocialNetwork</string>
    <string name="log_out">Log OUt</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="dashboard">Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seacrh">Seacrh</string>
    <string name="message">Message</string>
    <string name="status">Status</string>
    <string name="name">Name</string>
    <string name="profilename">ProfileName</string>
    <string name="todo">TODO</string>
    <string name="ime_korisnika">ime_korisnika</string>
    <string name="new_username">new_username</string>
    <string name="new_email">new_email</string>
    <string name="w">TODO</string>
    <string name="add">Add</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>
    <string name="new_password">new_password</string>
    <string name="edit">edit</string>
    <string name="todoy">TODO</string>
    <string name="todoyy">TODO</string>
    <string name="singin">SingIN</string>
    <string name="password">Password</string>
    <string name="i_don_t_have_an_account">I don\'t have an Account</string>
    <string name="submit">Submit</string>
    <string name="email_address">Email Address</string>
    <string name="todoa">TODO</string>
    <string name="names">Name</string>
    <string name="registration">Registration</string>
    <string name="email_addresss">Email Address</string>
    <string name="password_repeat">Password Repeat</string>
    <string name="passwords">Password</string>
    <string name="registrations">Registration</string>
    <string name="i_alredy_have_account">I alredy have account</string>
    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="yxy">TODO</string>
</resources>